# backeend-novo

./: fabidecor_bkp.json  package-lock.json  pyproject.toml
config/: settings.py  urls.py
fabidecor/: admin.py  models.py  serializers.py  views.py
fabidecor/migrations/: 0001_initial.py  0002_compra.py  0002_produto_tema.py  0003_rename_titulo_produto_nome_remove_produto_isbn.py  0004_produto_categoria.py  0005_produto_tema_alter_produto_categoria.py  0006_alter_produto_tema.py
fabidecor/models/: __init__.py  categoria.py  produto.py  tema.py
fabidecor/serializers/: __init__.py  categoria.py  produto.py  tema.py
fabidecor/views/: __init__.py  categoria.py  produto.py  tema.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
