[project]
name = ""
version = ""
description = ""
authors = [
    {name = "y",email = "alessandralelehfr495@gmail.com"},
    {name = "alessandrafr4",email = "alessandralelehfr495@gmail.com"},
    {name = "alessandrafr4",email = "1"},
]
dependencies = [
    "django>=4.2.5",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
    "djangorestframework-simplejwt>=5.3.0",
    "setuptools>=68.2.2",
    "python-magic>=0.4.27",
    "Pillow>=10.0.1",
    "drf-spectacular>=0.26.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "1"}

